# GTFinal

./: AdvancedOgreFramework.cpp  AdvancedOgreFramework.h  AnimatedGraphicsBody.h  AppState.h  AppStateManager.cpp  AppStateManager.h  Final_Game_Spec.docx  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  Goal.cpp  Goal.h  Graphics.cpp  Graphics.h  GraphicsBody.cpp  GraphicsBody.h  InstructionState.cpp  InstructionState.h  KillBox.cpp  KillBox.h  Makefile.am  MenuState.cpp  MenuState.h  MotionState.cpp  MotionState.h  Penguin.cpp  Penguin.h  PenguinApp.cpp  PenguinApp.h  Physics.cpp  Physics.h  PhysicsBody.cpp  PhysicsBody.h  README.md  SoundManager.cpp  SoundManager.h  Terrain.cpp  Terrain.h  Wall.cpp  (+4 more)
media/images/: Face.imageset  Face.imageset~  GameOver.imageset  Title.imageset  Title.imageset~
media/materials/scripts/: Examples.material
media/particle/: Examples.particle
